[No user story](Freddie Svedberg)[Resolved the issue with medvetandegrad expanding too much when pressing the collapse button]

--- a/vITalAngular/src/app/views/patient-overview/patient-overview.component.css
+++ b/vITalAngular/src/app/views/patient-overview/patient-overview.component.css
@@ -26,7 +26,6 @@
   font-size: 100%;
   margin-bottom: 40px;
   margin-left:10px;
-  width: 500px;
   /*margin-left: 250px;*/
 }
 .inputField {
@@ -133,4 +132,3 @@ input[type=radio] {
     width: 100%;
 
 }
-
